DIAC-445 Fix code smells in main